# teched2025-BTM260

./: .env  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  users.md
exercises/ex1/: ex1-basics.ipynb
exercises/ex2/: ex2-build-employee-portal-chatbot.ipynb
exercises/ex2/utils/: portal_agent_utils.py
