[project]
name = "teched-workshop"
version = "0.1.0"
description = "SAP GenAI Core Workshop: building simple agents leveraging LeanIX MCP and other integrations"
authors = [{ name = "Workshop Team" }]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.0",
    "python-dotenv",
    "requests",
    "openai>=1.0",
    "httpx",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipykernel"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
